# telegram-bot-api-mock

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
src/telegram_bot_api_mock/: __init__.py  app.py  config.py  dependencies.py  exceptions.py
src/telegram_bot_api_mock/models/: __init__.py  media_types.py  request_models.py  response_models.py  telegram_types.py  update_types.py
src/telegram_bot_api_mock/routes/bot/: __init__.py  callbacks.py  chat_actions.py  fallback.py  media.py  messages.py  request_parsing.py  updates.py  webhooks.py
src/telegram_bot_api_mock/routes/client/: __init__.py  callbacks.py  media.py  messages.py  updates.py
src/telegram_bot_api_mock/services/: __init__.py  media_service.py  message_service.py  update_service.py  webhook_service.py
src/telegram_bot_api_mock/state/: __init__.py  counters.py  file_storage.py  storage.py
tests/: __init__.py  conftest.py  test_health.py
tests/integration/: test_bot_messages.py  test_bot_webhooks.py  test_client_messages.py  test_e2e.py  test_media.py  test_token_validation.py  test_webhook_delivery.py
tests/unit/: test_models.py  test_state.py
